<resources>
    <string name="app_name">Edvora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edvora">Edvora</string>
    <string name="rides">Rides:</string>
    <string name="city_name">City Name</string>
    <string name="state_name">State Name</string>
    <string name="ride_id">Ride Id :</string>
    <string name="origin_station">Origin Station :</string>
    <string name="station_path">station_path :</string>
    <string name="date">Date :</string>
    <string name="distance">Distance :</string>
    <string name="_0">002</string>
    <string name="_20">20</string>
    <string name="_15th_feb_2022_16_33">15th Feb 2022 16:33</string>
    <string name="name">Dhruv Singh</string>
    <string name="filters">Filters</string>
</resources>