<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_round_corners"
    android:layout_margin="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clNearest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_round_corners"
            android:paddingHorizontal="30dp"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/ivMapImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/round_corner"
                android:src="@drawable/map"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="@id/clNearest"
                app:layout_constraintStart_toStartOf="@id/clNearest"
                app:layout_constraintTop_toTopOf="@id/clNearest" />

            <TextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/tv_round_coner"
                android:fontFamily="@font/inter_regular"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/city_name"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/ivMapImage"
                app:layout_constraintTop_toBottomOf="@id/ivMapImage" />

            <TextView
                android:id="@+id/tvStateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_round_coner"
                android:fontFamily="@font/inter_regular"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/state_name"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/tvCityName"
                app:layout_constraintEnd_toEndOf="@id/ivMapImage"
                app:layout_constraintTop_toTopOf="@id/tvCityName" />

            <TextView
                android:id="@+id/tvRideId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/ride_id"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/ivMapImage"
                app:layout_constraintTop_toBottomOf="@id/tvCityName" />

            <TextView
                android:id="@+id/tvOriginStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/origin_station"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/ivMapImage"
                app:layout_constraintTop_toBottomOf="@id/tvRideId" />


            <TextView
                android:id="@+id/tvStationPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/station_path"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/ivMapImage"
                app:layout_constraintTop_toBottomOf="@id/tvOriginStation" />


            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/ivMapImage"
                app:layout_constraintTop_toBottomOf="@id/tvStationPath" />


            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/distance"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/ivMapImage"
                app:layout_constraintTop_toBottomOf="@id/tvDate" />

            <TextView
                android:id="@+id/tvRideResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tvRideId"
                app:layout_constraintStart_toEndOf="@id/tvRideId"
                app:layout_constraintTop_toTopOf="@id/tvRideId" />

            <TextView
                android:id="@+id/tvOriginStationResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/_20"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tvOriginStation"
                app:layout_constraintStart_toEndOf="@id/tvOriginStation"
                app:layout_constraintTop_toTopOf="@id/tvOriginStation" />

            <TextView
                android:id="@+id/tvStationPathResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_regular"
                android:singleLine="true"
                android:text="[20, 39, 40, 42, 54, 63, 72, 88, 98]"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tvStationPath"
                app:layout_constraintEnd_toEndOf="@id/clNearest"
                app:layout_constraintStart_toEndOf="@id/tvStationPath"
                app:layout_constraintTop_toTopOf="@id/tvStationPath" />

            <TextView
                android:id="@+id/tvDateResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/_15th_feb_2022_16_33"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tvDate"
                app:layout_constraintStart_toEndOf="@id/tvDate"
                app:layout_constraintTop_toTopOf="@id/tvDate" />

            <TextView
                android:id="@+id/tvDistanceResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_regular"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tvDistance"
                app:layout_constraintStart_toEndOf="@id/tvDistance"
                app:layout_constraintTop_toTopOf="@id/tvDistance" />


        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>